--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             text-align: center;
         }
         th {
-            background-color: #f4f4f4;
+            background-color: #333;
         }
     </style>
 </head>
