--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@
                 </tbody>
             </table>
         </div>
+
+        <section class="event-banner" onclick="toggleDropdown('ufc307')">
+            <h2>UFC 307</h2>
+        </section>
+        <div id="ufc307" class="dropdown-content">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Fight</th>
+                        <th>Predicted Winner</th>
+                        <th>Confidence</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody id="ufc307-table">
+                    <!-- Predictions will be populated here -->
+                </tbody>
+            </table>
+        </div>
+
+
     </main>
 
     <script src="script.js"></script>
