--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- New Picks Box -->
         <div class="new-picks-box">
-            NEW PICKS EVERY FRIDAY
+            PREDICTIONS BELOW (NEW PICKS EVERY FRIDAY )
         </div>
 
         <!-- Event Banner with Dropdown -->
