--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 <body>
     <!-- Banner -->
     <header class="banner">
-        <h1><a href="index.html">ML-MMA</a></h1>
-        <nav class="nav">
-            <a href="about.html">About</a>
-        </nav>
+        <div class="banner-container">
+            <!-- ML-MMA in the Center -->
+            <h1 class="center"><a href="index.html">ML-MMA</a></h1>
+
+            <!-- Navigation Links on the Right -->
+            <nav class="nav">
+                <a href="about.html">About</a>
+                <a href="news.html">News / Updates</a>
+            </nav>
+        </div>
     </header>
 
 
