--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
         </div>
 
         <!-- Event Banner with Dropdown -->
+        <section class="event-banner" onclick="toggleDropdown('ufconespncovingtonvsbuckley')">
+            <h2>UFC ON ESPN: COVINGTON VS BUCKLEY</h2>
+        </section>
+        <!-- Dropdown Content (Initially Hidden) -->
+        <div id="ufconespncovingtonvsbuckley" class="dropdown-content">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Fight</th>
+                        <th>Predicted Winner</th>
+                        <th>Confidence</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody id="ufconespncovingtonvsbuckley-table">
+                    <!-- Predictions will be populated here -->
+                </tbody>
+            </table>
+        </div>
+
+
+        <!-- Event Banner with Dropdown -->
         <section class="event-banner" onclick="toggleDropdown('ufc310')">
             <h2>UFC 310</h2>
         </section>
