--- a/news.html
+++ b/news.html
@@ -33,6 +33,17 @@
         </nav>
     </header>
 
+    <main class="content">
+        <div class="info-box">
+            <h2>12/17/24</h2>
+            <p>
+                Model has an increased accuracy now at about 70 something odd percent and only overfitting by about a percent. With that said it still performed awful on the most recent Colby vs Buckley fight night, as expected. Many of the fighters don't contain a lot of historical data resulting in shitty predictions. 
+            </p>
+        </div>
+    </main>
+
+
+
     <!-- Main Content -->
     <main class="content">
         <div class="info-box">
