--- a/index.html
+++ b/index.html
@@ -30,7 +30,28 @@
         <div class="new-picks-box">
             PREDICTIONS BELOW (NEW PICKS EVERY FRIDAY )
         </div>
+        
 
+        <!-- Event Banner with Dropdown -->
+        <section class="event-banner" onclick="toggleDropdown('ufc313')">
+            <h2>UFC 313</h2>
+        </section>
+        <!-- Dropdown Content (Initially Hidden) -->
+        <div id="ufc313" class="dropdown-content">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Fight</th>
+                        <th>Predicted Winner</th>
+                        <th>Confidence</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody id="ufc313-table">
+                    <!-- Predictions will be populated here -->
+                </tbody>
+            </table>
+        </div>
 
 
         <!-- Event Banner with Dropdown -->
