--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
         
 
         <!-- Event Banner with Dropdown -->
+        <section class="event-banner" onclick="toggleDropdown('ufc315')">
+            <h2>UFC 315</h2>
+        </section>
+        <!-- Dropdown Content (Initially Hidden) -->
+        <div id="ufc315" class="dropdown-content">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Fight</th>
+                        <th>Predicted Winner</th>
+                        <th>Confidence</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody id="ufc315-table">
+                    <!-- Predictions will be populated here -->
+                </tbody>
+            </table>
+        </div>
+
+
+
+        <!-- Event Banner with Dropdown -->
         <section class="event-banner" onclick="toggleDropdown('ufc313')">
             <h2>UFC 313</h2>
         </section>
