--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
         </div>
         
 
+                        <!-- Event Banner with Dropdown -->
+        <section class="event-banner" onclick="toggleDropdown('ufc319')">
+            <h2>UFC 319</h2>
+        </section>
+        <!-- Dropdown Content (Initially Hidden) -->
+        <div id="ufc319" class="dropdown-content">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Fight</th>
+                        <th>Predicted Winner</th>
+                        <th>Confidence</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody id="ufc316-table">
+                    <!-- Predictions will be populated here -->
+                </tbody>
+            </table>
+        </div>
+
+
+
                 <!-- Event Banner with Dropdown -->
         <section class="event-banner" onclick="toggleDropdown('ufc316')">
             <h2>UFC 316</h2>
