--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <nav class="nav">
                 <a href="about.html">About</a>
                 <a href="news.html">News / Updates</a>
+                <a href="jobs.html">Job Listings</a>
             </nav>
         </div>
     </header>
