--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
         <nav class="nav">
             <a href="about.html">About</a>
             <a href="news.html">News / Updates</a>
+            <a href="jobs.html">Job Listings</a>
         </nav>
     </header>
 
