--- a/jobs.html
+++ b/jobs.html
@@ -23,20 +23,20 @@
         .stat-box {
             background-color: #333;
             color: white;
-            padding: 15px 25px;
+            padding: 10px 20px;
             border-radius: 5px;
             text-align: center;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .stat-number {
-            font-size: 2em;
+            font-size: 1.5em;
             font-weight: bold;
             color: #ffeb3b;
         }
 
         .stat-label {
-            font-size: 0.9em;
+            font-size: 0.85em;
             margin-top: 5px;
             opacity: 0.9;
         }
@@ -44,8 +44,9 @@
         .last-updated {
             text-align: center;
             color: #666;
-            margin: 10px 0;
+            margin: 10px 0 20px 0;
             font-style: italic;
+            font-size: 0.9em;
         }
 
         .jobs-container {
@@ -144,17 +145,14 @@
 
     <!-- Main Content -->
     <main>
-        <div class="jobs-header">
-            <h2>Job Listings</h2>
-            <div class="last-updated" id="lastUpdated">Loading...</div>
-        </div>
-
         <div class="jobs-stats">
             <div class="stat-box">
                 <div class="stat-number" id="totalJobs">0</div>
                 <div class="stat-label">Total Jobs</div>
             </div>
         </div>
+
+        <div class="last-updated" id="lastUpdated">Loading...</div>
 
         <div id="loading" class="loading">Loading jobs...</div>
         <div id="error" class="error" style="display: none;"></div>
