--- a/jobs.html
+++ b/jobs.html
@@ -75,11 +75,11 @@
         .filter-panel {
             display: none;
             background-color: #f4f4f4;
-            padding: 20px;
+            padding: 15px;
             border-radius: 5px;
             margin: 15px auto;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
+            max-width: 400px;
         }
 
         .filter-panel.active {
@@ -88,15 +88,15 @@
 
         .filter-title {
             font-weight: bold;
-            margin-bottom: 15px;
+            margin-bottom: 12px;
             color: #333;
-            font-size: 1.1em;
+            font-size: 0.95em;
         }
 
         .filter-checkboxes {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 8px;
             align-items: flex-start;
         }
 
@@ -104,26 +104,29 @@
             display: flex;
             align-items: center;
             cursor: pointer;
-            padding: 5px;
+            padding: 4px;
         }
 
         .filter-checkbox-item input[type="checkbox"] {
-            margin-right: 10px;
-            width: 18px;
-            height: 18px;
+            margin-right: 8px;
+            width: 20px;
+            height: 20px;
             cursor: pointer;
+            accent-color: #333;
+            flex-shrink: 0;
         }
 
         .filter-checkbox-item label {
             cursor: pointer;
             color: #333;
-            font-size: 1em;
+            font-size: 0.9em;
+            user-select: none;
         }
 
         .filter-actions {
-            margin-top: 15px;
+            margin-top: 12px;
             display: flex;
-            gap: 10px;
+            gap: 8px;
             justify-content: center;
         }
 
@@ -131,18 +134,14 @@
             background-color: #333;
             color: white;
             border: none;
-            padding: 8px 16px;
+            padding: 6px 12px;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 0.9em;
+            font-size: 0.85em;
         }
 
         .filter-button:hover {
             background-color: #555;
-        }
-
-        .filter-button.clear {
-            background-color: #666;
         }
 
         .jobs-container {
