--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="about.html">About</a>
                 <a href="news.html">News / Updates</a>
                 <a href="jobs.html">Job Listings</a>
+                <a href="map.html">Fuel Map</a>
             </nav>
         </div>
     </header>
