New check feature + fixes

--- a/map.html
+++ b/map.html
@@ -102,6 +102,22 @@
         <button id="next-date" class="date-nav-btn" title="Next Day">►</button>
     </div>
 
+    <!-- Progress Counter -->
+    <div class="progress-counter">
+        <div class="progress-counter-title">Review Progress</div>
+        <div class="progress-counter-stats">
+            <span class="checked" id="checked-count">0</span> / <span class="total" id="total-count">0</span>
+        </div>
+        <div class="progress-bar-container">
+            <div class="progress-bar-fill" id="progress-bar" style="width: 0%"></div>
+        </div>
+        <div class="progress-counter-hint">Ctrl+Click to check off stations</div>
+        <div class="progress-counter-actions">
+            <button class="progress-btn" id="check-all-btn">Check All</button>
+            <button class="progress-btn danger" id="uncheck-all-btn">Reset</button>
+        </div>
+    </div>
+
 
     <!-- Main Content -->
     <main>
