--- a/map.html
+++ b/map.html
@@ -126,7 +126,7 @@
 
         <!-- Competitor Info Panel (initially hidden) -->
         <div id="competitor-panel" class="competitor-panel">
-            <button id="close-panel" class="close-btn">&times;</button>
+            <button id="close-panel" class="close-btn">✕</button>
             <h3 id="station-name"></h3>
             <p id="station-address"></p>
             <div id="competitors-list"></div>
