added notes section

--- a/map.html
+++ b/map.html
@@ -118,6 +118,20 @@
         </div>
     </div>
 
+    <!-- Notes Section -->
+    <div class="notes-section hidden" id="notes-section">
+        <div class="notes-section-title">
+            <span>Station Notes</span>
+            <button class="clear-note-btn" id="clear-note-btn">Clear</button>
+        </div>
+        <div class="notes-station-name" id="notes-station-name">No station selected</div>
+        <textarea 
+            class="notes-textarea" 
+            id="notes-textarea" 
+            placeholder="Click a station to add notes..."></textarea>
+        <div class="notes-hint">Notes are saved locally in your browser</div>
+    </div>
+
 
     <!-- Main Content -->
     <main>
