--- a/map.html
+++ b/map.html
@@ -10,7 +10,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="map-styles.css">
+    <link rel="stylesheet" href="map-styles.css?v=2">
     
     <style>
         /* Date Navigation Controls */
