--- a/tracker.html
+++ b/tracker.html
@@ -425,7 +425,7 @@
         <!-- RIGHT PANEL -->
         <div class="right-panel" id="right-panel">
             <div id="empty-state" class="empty-state">
-                <div class="empty-icon">ðŸ“‹</div>
+                <div class="empty-icon"></div>
                 <div class="empty-title">Select a Store</div>
                 <div class="empty-text">Choose a store from the list to view and edit notes</div>
             </div>
