--- a/tracker.html
+++ b/tracker.html
@@ -383,7 +383,7 @@
         <div class="left-panel">
             <div class="header">
                 <div class="logo">STRATEGY TRACKER</div>
-                <div class="subtitle">Road Ranger Fleet</div>
+                <div class="subtitle">Road Ranger Stations</div>
             </div>
 
             <div class="stats">
