--- a/tracker.html
+++ b/tracker.html
@@ -21,10 +21,10 @@
             --text-primary: #ffffff;
             --text-secondary: #a0a0a0;
             --text-muted: #606060;
-            --accent: #00ff88;
-            --accent-dim: #00cc6a;
+            --accent: #2563eb;
+            --accent-dim: #1e40af;
             --border: #333333;
-            --shadow: rgba(0, 255, 136, 0.1);
+            --shadow: rgba(37, 99, 235, 0.1);
         }
 
         body {
@@ -196,7 +196,7 @@
         .editor-header {
             padding: 2rem;
             border-bottom: 1px solid var(--border);
-            background: rgba(0, 255, 136, 0.02);
+            background: rgba(37, 99, 235, 0.02);
         }
 
         .editor-title {
