added default stores

--- a/price-index.html
+++ b/price-index.html
@@ -1433,8 +1433,258 @@
                 'SPEEDWAY 03961|4895 DINIUS RD|WILLIAMSVILLE'
             ],
             '132': [
-                'PILOT #468|ADDRESS|CITY',
-                'MURPHY 7231 ATWALMRT|1201 W FERDON ST|LITCHFIELD'
+                'PILOT #468|ADDRESS|NeedToAdd',
+                'MURPHY 7231 ATWALMRT|1201 W FERDON ST|LITCHFIELD',
+                'MEIJER STORE #146|2401 N PROSPECT AVE|CHAMPAIGN',
+                'QUIKTRIP 7194|1505 N NEIL ST|CHAMPAIGN',
+                'CIRCLE K # 1413|507 W UNIVERSITY AVE|URBANA',
+                'PILOT #468|815 US HIGHWAY 24 W|GILMAN',
+                'PILOT #468|ADDRESS|NeedToAdd'
+            ],
+            '136': [
+                'PLEASANT SPRINGS TRA|2763 COUNTY ROAD N|COTTAGE GROVE',
+                'BP 1378500|1888 BARBER DR|STOUGHTON',
+                'KWIK TRIP 893|1359 US HIGHWAY 51|STOUGHTON',
+                'Loves|W9493 COUNTY RD|NeedToAdd'
+            ],
+            '139': [
+                'Loves|809 MOORE AVE|NeedToAdd',
+                'FUEL MART 787|1207 E SOUTHLINE RD|TUSCOLA',
+                'FLYING J 643|1701 W EVERGREEN AVE|EFFINGHAM',
+                'Pilot|2500 N 3RD ST|NeedToAdd(wexco doesnt grab it)',
+                'LANMAN OIL CO.|1000 E SOUTHLINE RD|TUSCOLA',
+                'IL 0229|314 E SOUTHLINE RD|TUSCOLA'
+            ],
+            '140': [
+                'BP 9657560|1302 RAYMOND DR|MENDOTA',
+                'MENDOTA CITGO|208 12TH ST|MENDOTA',
+                'Loves|3020 E 8TH RD|UTICA(need to add)',
+                'Loves|1001 W WALNUT ST|OGLESBY(need to add)'
+            ],
+            '141': [
+                'BP 6623045|1030 W STATE ROAD 42|BRAZIL',
+                'PETRO BRAZIL|1035 W STATE ROAD 4 2|BRAZIL',
+                'PILOT SITE 444|4376 N STATE ROAD 59|BRAZIL',
+                'SPEEDWAY|4425 N STATE ROUTE|NeedToAdd(not on wex)'
+            ],
+            '144': [
+                'FLYING J 637|445 EVANSDALE DR|EVANSDALE',
+                'LOVES|NOT SURE|NeedToAdd',
+                'PILOT 1092|8950 EARHART LN SW|CEDAR RAPIDS'
+            ],
+            '145': [
+                'QUIKTRIP 0642|1923 BOWLES AVE|FENTON,QUIKTRIP',
+                'ROCKET 4229|222 SCHNEIDER DR|FENTON',
+                'ROCKET 4233|698 GRAVOIS BLUFFS BLVD|FENTON',
+                'PILOT|1475 THORNTON ST|PACIFIC NeedToAdd(not on wex)',
+                'WALLYS|950 ASSEMBLY PKWY|FENTON',
+                'QUIKTRIP 0641|604 BIG BEND RD|BALLWIN',
+                'MR FUEL 717|3324 HIGHWAY 100|VILLA RIDGE',
+                'FLYING J 645|1310 E CHAIN OF ROCKS RD|PONTOON BEACH',
+                'LOVES|2007 N MAIN ST|NeedToAdd'
+            ],
+            '153': [
+                'SHELL SERVICE STATIO|505 W IL ROUTE 38|ROCHELLE',
+                'BP 2618800|1180 N 7TH ST|ROCHELLE',
+                'BENNYS CORNER MARKE|601 FLAGG RD|ROCHELLE',
+                'STOP-N-GO #1530|1000 S 7TH ST|ROCHELLE,STOP-N-GO #1530',
+            ],
+            '157': [
+                'CIRCLE K 1350|107 W ELM ST|OKAWVILLE',
+                'LOVES|8690 RICHTER SCHOOL RD|NeedToAdd'
+            ],
+            '181': [
+                'CIRCLE K SITE #0140|1201 TORONTO RD|SPRINGFIELD,CIRCLE K SITE',
+                'QIK N EZ #61|1230 TORONTO RD|SPRINGFIELD,QIK N EZ #61',
+                'JIFFI STOP 20|3062 ADLAI STEVENSON DR|SPRINGFIELD'
+            ],
+            '185': [
+                'MINIT MART #0799|401 E SOUTH ST|MCLEAN',
+                'CASEYS #2554|2017 FOX CREEK RD|BLOOMINGTON',
+                'THORNTONS #222369|2903 WOODLAWN RD|LINCOLN'
+            ],
+            '186': [
+                'CASEYS #1326|115 E 5TH ST|MINONK',
+                'LOVES|2007 N MAIN ST|NeedToAdd',
+                'PILOT|1522 W MARKET ST|NeedToAdd (not on wex)'
+            ],
+            '187': [
+                'THORNTONS #221322 DIESE|3450 S CALIFORNIA AVE|CHICAGO',
+                'MARATHON|3541 S CALIFORNIA AVE|CHICAGO(NeedToAdd)'
+            ],
+            '203': [
+                'LOVES|4628 SOUTH MAIN STREET|ROCKFOR(NeedToAdd)',
+                'SOUTH MAIN MART|550 SOUTHROCK DR|ROCKFORD'
+            ],
+            '205': [
+                'FLYING J 646|16049 WILLOWBROOK RD|SOUTH BELOIT',
+                'KWIK TRIP #1276|16040 OAKFIELD PKWY|SOUTH BELOIT',
+                'THORNTONS #221331 DIESE|13555 WILLOWBROOK RD|ROSCOE',
+                'SPEEDWAY 3962|5951 E ROCKTON RD|ROSCOE(NeedToAddToSpeedwayScraper)',
+                'LOVES|13477 QUALITY DR,|ROSCOE(NeedToAdd)',
+                'PILOT|3001 MILWAUKEE RD|BELOIT(NeedToAdd not on wex)',
+                'FAS. FUEL SHIRLAND|518 SHIRLAND AVE|SOUTH BELOIT'
+            ],
+            '206': [
+                'WINNEBAGO CORNERS MA|903 N ELIDA ST|WINNEBAGO',
+                'QUIKTRIP 4428|1555 SANDY HOLLOW RD|ROCKFORD'
+            ],
+            '209': [
+                'LOVES|220 N OAKWOOD ST|TOMAH(NeedToAdd)',
+                'KWIK TRIP 775|611 GATEWAY AVE|MAUSTON',
+                'PILOT|1101 GATEWAY AVE|MAUSTON(NeedToAdd not on wex)',
+                'FLYING J|780 WI-54|BLACK RIVER FALLS(NeedToAdd not on wex)'
+            ],
+            '210': [
+                'CIRCLEK# 4701408|1110 DEMENT RD|ROCHELLE',
+                'PETRO CENTER ROCHELL|900 PETRO RD|ROCHELLE',
+                'PILOT 1181|1201 E IL ROUTE 38|ROCHELLE',
+                'LOVES|400 STEWARD RD|ROCHELLE(NeedToAdd)',
+                'LOVES|16991 IL-72|MONROE CENTER(NeedToAdd)'
+            ],
+            '211': [
+                'TOLLWAY MOBIL|7490 E RIVERSIDE BLVD|LOVES PARK',
+                'COSTCO|5000 STADIUM DR|LOVES PARK(NeedToAdd not on wex)',
+                'CASEYS #3760|4001 INTERSTATE BLVD|LOVES PARK',
+                'QUIKTRIP 7206|8070 E STATE ST|ROCKFORD'
+            ],
+            '225': [
+                'SHELL SERVICE STATIO|2225 N MAIN ST|PRINCETON',
+                'CASEYS #3531|2125 N MAIN ST|PRINCETON,CASEYS #3531',
+                'BP 9157801|1838 N MAIN ST|PRINCETON,BP 9157801',
+                'BECKS W PRINCE|605 W PERU ST|PRINCETON',
+                'CASEYS #1837|520 W PERU ST|PRINCETON,CASEYS #1837',
+                'SAPP BROTHERS ILLINOIS T|3130 MAY RD|PERU',
+                'FLYING J 644|343 CIVIC RD|LA SALLE'
+            ],
+            '226': [
+                'SPEEDWAY 43968|5 S GRAHAM RD|GREENWOOD',
+                'CIRCLE K # 02287|1183 E MAIN ST|GREENWOOD',
+                'PILOT|2962 E 500 N|WHITELAND(NeedToAdd not on wex)'
+            ],
+            '235': [
+                'SPEEDWAY 5036|110 ARROWHEAD DR|HAMPSHIRE',
+                'LOVES|201 LOVES CROSSING|HAMPSHIRE(NeedToAdd)',
+                'BP 9573387|19N430 US-20|HAMPSHIRE',
+                'LOVES|1900 BUSSE RD|ELK GROVE(NeedToAdd)'
+            ],
+            '236': [
+                'SCOTT OIL CO.INC|2526 MAIN ST|EAST TROY',
+                'KWIK TRIP #1029|1880 MAIN ST|EAST TROY'
+            ],
+            '240': [
+                'LUKE 235|2178 RIPLEY ST|LAKE STATION(NeedToAdd On Wex but not scraped)',
+                'LAKE GOLO|3600 CENTRAL AVE|LAKE STATION(NeedToAdd On Wex but not scraped)',
+                'FLYING J 650|1401 RIPLEY ST|LAKE STATION',
+                'MR FUEL 1020|1235 RIPLEY ST|LAKE STATION'
+            ],
+            '242': [
+                'CBS MINI MART|14130 HIGHWAY Z|SAINT ROBERT',
+                'JONESYS TRAVEL CENTE|2031 W ELM ST|LEBANON',
+                'L W PERUSSE OIL CO.|333 HIGHWAY Z|SAINT ROBERT',
+                'ON THE RUN #250|122 SAINT ROBERT BLVD|SAINT ROBERT',
+                'GIER OIL CO. INC.|681 OLD ROUTE 66|SAINT ROBERT',
+                'LOVES|3500 HY POINT INDUSTRIAL|ROLLA(NeedToAdd)',
+                'FLYING J 673|825 N LOOP DR|SULLIVAN'
+            ],
+            '263': [
+                'JOHNSON OIL CO.|3074 N STATE ROUTE 71|OTTAWA,JOHNSON OIL CO.',
+                'THORNTONS #222364|102 W ETNA RD|OTTAWA,THORNTONS #222364',
+                'LOVES|3020 E 8TH RD|UTICA(NeedToAdd)',
+                'PILOT 483|3801 N DIVISION ST|MORRIS'
+            ],
+            '265': [
+                'CASEYS #4384|1751 S GALENA AVE|DIXON',
+                'MURPHY 7165 ATWALMRT|1620 S GALENA AVE|DIXON'
+            ],
+            '266': [
+                'LOVES|201 LOVES DR|JACKSONVILLE(NeedToAdd)'
+            ],
+            '267': [
+                'SE 40665 PHARR TX|10701 S CAGE BLVD|PHARR',
+                'RIVER MART|914 W MILITARY HWY|PHARR(NeedToAdd try to find it)',
+                'SUNOCO SRVC STATION|7401 S JACKSON RD|PHARR'
+            ],
+            '268': [
+                'CASEYS #2514|306 N COURT ST|GRAYVILLE',
+                'HUCKS 101|552 N COURT ST|GRAYVILLE',
+                'LOVES|901 E 1250 S|HAUBSTADT(NeedToAdd)',
+                'PILOT|4610 BROADWAY ST|MT VERNON(NeedToAdd not on wex)'
+            ],
+            '269': [
+                'PILOT 1174|104 W TREFZ DR|MARSHALL',
+                'SHELL SERVICE STATIO|1803 IL -1|MARSHALL',
+                'CLARK COUNTY FUELS L|105 S MICHIGAN AVE|MARSHALL',
+                'ONE9|5555 E MARGARET DR|TERRE HAUTE(NeedToAdd not on wex)',
+                'LOVES|203 N HAUGHTON HWY|Greenup(NeedToAdd)',
+                'PILOT|2500 N 3RD ST|EFFINGHAM(NeedToAdd not on wex)'         
+            ],
+            '270': [
+                'LOVES|21548 FM 471 S|NATALIA(NeedToAdd)',
+                'PILOT|14555 INTERSTATE 35|VAN ORMY(NeedToAdd not on wex)',
+                'RAM OIL LTD. LLP|1104 W COMAL ST|PEARSALL'
+            ],
+            '271': [
+                'PILOT 1161|3145 METEOR CRATER RD|ODESSA',
+                'ALLSUPS|3330 FM 866|ODESS(NeedToAdd not on wex)',
+                'SHELL SERVICE STATIO|5934 W INTERSTATE 20|ODESSA',
+                'LOVES|1901 W INTERSTATE 20|ODESSA(NeedToAdd)',
+                'PILOT 1207|101 S LOOP 464 RD|MONAHANS',
+                'PILOT # 1147|127 W STATE HIGHWAY 302|KERMIT',
+                'FLYING J #1206|700 E HWY 302|KERMIT'
+            ],
+            '272': [
+                'LOVES|28527 I-35|ENCINAL(NeedToAdd)',
+                'LOVES|1963 I-35|COUTLLA(NeedToAdd)'
+            ],
+            '273': [
+                'LOVES|21379 US 77 EXPRESSWAY|HARLINGEN(NeedToAdd)',
+                '21469 US-77 FRONTAGE RD|HARLINGEN(NeedToAdd)',
+                'LOVES|545 I-2|DONNA(NeedToAdd)',
+                'LOVES|3400 NAFTA PKWY|BROWNSVILLE(NeedToAdd)',
+                'LOVES|1451 N US HIGHWAY 77|KINGSVILLE(NeedToAdd)'
+            ],
+            '275': [
+                'SUNOCO SRVC STATION|805 N CROCKETT AVE|SONORA',
+                'LOVES|3880 LOOP 467|SONORA(NeedToAdd)',
+                'PILOT|2342 N MAIN ST|JUNCTION(NeedToAdd on wex but not scraped)',
+            ],
+            '276': [
+                'CHEVRON 0200164|705 NEW DALLAS HWY|LACY LAKEVIEW',
+                'CIRCLE K #2741564|1301 N LOOP 340|LACY LAKEVIEW',
+                'PILOT|2409 S NEW RD|WACO(NeedToaAdd on wex but not scraped)',
+                'PILOT|8055 S IH 35|ROBINSON(NeedToAdd not on wex)',
+                'ABBOTT TRAVEL CENTER|1197 IH 35 S|ABBOTT',
+                'LOVES|1501 CORSICANA HWY|HILLSBORO(NeedToAdd)'
+            ],
+            '277': [
+                'CIRCLE K|905 N MCCOY BLVD|NEW BOSTON(NeedToAdd not on wex)',
+                'PARADISE QUICKSTOP #|900 N MCCOY BLVD|NEW BOSTON',
+                'SHELL SERVICE STATIO|708 N MCCOY BLVD|NEW BOSTON',
+                'TIGER MART 88|1888 W US HIGHWAY 82|NEW BOSTON',
+                'LOVES|2486 US-82|NEW BOSTON(NeedToAdd)',
+                'LOVES|451 LEARY RD|TEXARKANA(NeedToAdd)'
+            ],
+            '278': [
+                'BRINKLEY MOBIL JFS #|2102 N HWY 49|BRINKLEY',
+                'HARI FOOD MART|1920 N MAIN ST|BRINKLEY',
+                'ONE9|2101 HWY 49|BRINKLEY(NeedToAdd not on wex)',
+                'JORDANS KWIK STOP #8|1414 N MAIN ST|BRINKLEY',
+                'LOVES|1010 N MAIN ST|PALESTINE'
+            ],
+            '279': [
+                'SHAH PETROLEUM LLC|1754 ILLINOIS 37|MARION,SHAH PETROLEUM LLC',
+                'CASEYS #3391|2314 W MAIN ST|MARION,CASEYS #3391',
+                'PILOT #595|2611 VERNELL RD|MARION',
+                'LOVES|1900 THE HILL AVE|MARION(NeedToAdd)',
+            ],
+            '280': [
+                'QUIKTRIP 7913|1907 S STOCKTON AVE|MONAHANS',
+                'PILOT 1207|101 S LOOP 464 RD|MONAHANS',
+                'PILOT|4840 I-20|MONAHANS(NeedToAdd)',
+                'FLYING J #1206|700 E HWY 302|KERMIT',
+                'LOVES|674 TX-302|KERMIT(NeedToAdd)',
+                'LOVES|5202 S CEDAR ST|PECOS(NeedToAdd)'
             ],
         };
         
