add stores for index

--- a/price-index.html
+++ b/price-index.html
@@ -1686,6 +1686,93 @@
                 'LOVES|674 TX-302|KERMIT(NeedToAdd)',
                 'LOVES|5202 S CEDAR ST|PECOS(NeedToAdd)'
             ],
+            '281': [
+                "ALLSUP'S 102105|2205 CONRAD HILTON BLVD|CISCO",
+                'SUNOCO SRVC STATION|1500 INTERSTATE 20 W|CISCO',
+                'SHELL SERVICE STATIO|16851 INTERSTATE 20|CISCO',
+                'LOVES|6950 I-20|RANGER(NeedToAdd)'
+            ],
+            '282': [
+                'GAINESVILLE TRUCK ST.|3590 N INTERSTATE 35|GAINESVILLE',
+                'XPRESSWAY VALERO|1934 N INTERSTATE 35|GAINESVILLE',
+                'QUIKTRIP 1883|926 W HIGHWAY 82|GAINESVILLE',
+                'LOVES|6421 N INTERSTATE 35|DENTON(NeedToAdd)'
+            ],
+            '283': [
+                'NEED TO MAKE ROAD RANGER GET SCRAPED FROM WEX THEN HANDLE THIS'
+            ],
+            '284': [
+                'HOP IN 430469|101 E MAIN ST|NEW DEAL',
+                'LOVES|4221 N INTERSTATE 27|LUBBOCK(NeedToAdd)',
+                'SEI FUELS STORE 4252|2424 N LOOP 289|LUBBOCK',
+                'FLYING J 733|602 MARSHA SHARP FWY|LUBBOCK',
+                "TOOTN' TOTUM #138|5202 ERSKINE ST|LUBBOCK",
+                'ROOTS SLAYTON|1755 S 9TH ST|SLATON'
+            ],
+            '285': [
+                'CK. SITE #4028|1805 W INTERSTATE 10|SEGUIN',
+                'CHEVRON 0383946|1810 W INTERSTATE 10|SEGUIN(NeedToAdd on wex but not scraped)',
+                'LOVES|3158 I-10 W|SEGUIN(NeedToAdd)',
+                'QUIKTRIP 4044|200 E INTERSTATE 10|SEGUIN(NeedToAdd on wex but not scraped)',
+                'SHELL SERVICE STATIO|2718 FM 725|NEW BRAUNFELS'
+            ],
+            '286': [
+                'NATIONAL TRUCK STOP|11301 E INTERSTATE|AMARILLO',
+                'BUC-EES|9900 I-40 E|AMARILLO(NeedToAdd not on wex)',
+                'FLYING J 723|9601 I40 E EXIT 76|AMARILLO',
+                "TOOT'N TOTUM #99|8507 E INTERSTATE 40|AMARILLO",
+                'TA AMARILLO|7000 E INTERSTATE 4 0|AMARILLO',
+                'LOVES|6930 I-40 E|AMARAILLO',
+                'CEFCO 2005|5000 E INTERSTATE 40|AMARILLO',
+                'QUIKTRIP 7908|5105 E INTERSTATE 40|AMARILLO'
+            ],
+            '287': [
+                'LENNYS GAS N WASH BO|5916 N CONVENT ST|BOURBONNAIS',
+                'SPEEDWAY 43593|604 ARMOUR RD|BOURBONNAIS',
+                'SHELL SERVICE STATIO|601 S 88TH AVE|PEOTONE',
+                'LOVES|3407 US-45|KANKAKEE(NeedToAdd)',
+                'PILOT|6002 W MONEE MANHATTAN RD|MONEE(NeedToAdd not on wex)'
+            ],
+            '289': [
+                'JET TRUCK STOP|771 STATE HIGHWAY 179|TEAGUE',
+                'TA EXPRESS FAIRFIELD|300 E I 45|FAIRFIELD',
+                'LOVES|299 I-45|FAIRFIELD(NeedToAdd)',
+                'PILOT 1028|2605 W COMMERCE ST|BUFFALO',
+                'LOVES|1501 CORSICANA HWY|HILLSBORO(NeedToAdd)'
+            ],
+            '290': [
+                'PRIGMORE AVE. 66|2100 S PRIGMORE AVE|JOPLIN',
+                'QUIKTRIP 7061|6601 E 32ND ST|JOPLIN',
+                'PILOT|4500 STATE HWY 43|SPRINGFIELD(NeedToAdd not on wex)'
+            ],
+            '312': [
+                'VALERO 2740969|1010 N MAIN ST|VIDOR',
+                'FUEL BOX LLC|2410 N MAIN ST|VIDOR',
+                'SHELL SERVICE STATIO|12330 IH-10|ORANGE',
+                'GATEWAY TRAVEL PLAZA|22965 INTERSTATE 10|VIDOR',
+                'PILOT|2205 HIGHWAY 62 S|ORANGE(NeedToAdd)',
+                'PILOT|7112 I-10 W|ORANGE(NeedToAdd)'
+            ],
+            '315': [
+                'LOVES|101 PINNACLE RD|LAREDO(NeedToAdd)'
+            ],
+            '319': [
+                'LOVES|1021 DALE EVANS DR|ITALY(NeedToAdd)',
+                'SHELL SERVICE STATIO|1020 DALE EVANS DR|ITALY',
+                'TIGER MART #32|101 L R CAMPBELL RD|ITALY',
+                'SHELL SERVICE STATIO|160 STATE HIGHWAY 77|HILLSBORO',
+                'LOVES|1501 CORSICANA HWY|HILLSBORO(NeedToAdd)'
+            ],
+            '323': [
+                'NAT 24 CANTON|17169 INTERSTATE 20|CANTON',
+                'CIRCLEK# 2706340|2256 N TRADE DAYS BLVD|CANTON',
+                'SHELL SERVICE STATIO|21620 INTERSTATE 20|CANTON',
+                'SHELL SERVICE STATIO|9800 INTERSTATE 20|CANTON',
+                'LOVES|1221 S OAK ST|VAN(NeedToAdd)',
+                'SHELL SERVICE STATIO|1700 WILSON RD|TERRELL',
+                'QUIKTRIP 0993|1619 STATE HIGHWAY 34 S|TERRELL',
+                'BUC-EES|506 I-20|TERRELL(NeedToAdd not on wex)'
+            ],
         };
         
         // Load saved competitor selections from localStorage
