--- a/price-index.html
+++ b/price-index.html
@@ -1423,6 +1423,7 @@
         
         // Custom default selections for specific stores (by store number)
         // Format: { storeNumber: [competitorNames...] }
+        // Format: { storeNumber: [competitorNames...] }
         const customDefaults = {
                 '118': [
                 'CIRCLE K # 01303|2120 N DIRKSEN PKWY|SPRINGFIELD',
@@ -1442,13 +1443,13 @@
                 'PILOT #468|ADDRESS|NeedToAdd'
             ],
             '136': [
-                'PLEASANT SPRINGS TRA|2763 COUNTY ROAD N|COTTAGE GROVE',
+                'BP 6293898|2763 COUNTY ROAD N|COTTAGE GROVE',
                 'BP 1378500|1888 BARBER DR|STOUGHTON',
                 'KWIK TRIP 893|1359 US HIGHWAY 51|STOUGHTON',
-                'Loves|W9493 COUNTY RD|NeedToAdd'
+                "Love's Travel Stop in Dekorra - Poynette, WI. Store #637|W9493 County Road Cs|Dekorra - Poynette"
             ],
             '139': [
-                'Loves|809 MOORE AVE|NeedToAdd',
+                "Love's Travel Stop in Tuscola, IL. Store #798|809 Moore Ave|Tuscola",
                 'FUEL MART 787|1207 E SOUTHLINE RD|TUSCOLA',
                 'FLYING J 643|1701 W EVERGREEN AVE|EFFINGHAM',
                 'Pilot|2500 N 3RD ST|NeedToAdd(wexco doesnt grab it)',
@@ -1458,8 +1459,8 @@
             '140': [
                 'BP 9657560|1302 RAYMOND DR|MENDOTA',
                 'MENDOTA CITGO|208 12TH ST|MENDOTA',
-                'Loves|3020 E 8TH RD|UTICA(need to add)',
-                'Loves|1001 W WALNUT ST|OGLESBY(need to add)'
+                "Love's Travel Stop in Utica , IL. Store #351|3020 E. 8th Rd.|Utica",
+                "Love's Travel Stop in Oglesby, IL. Store #529|1001 W. Walnut St.|Oglesby"
             ],
             '141': [
                 'BP 6623045|1030 W STATE ROAD 42|BRAZIL',
@@ -1469,7 +1470,7 @@
             ],
             '144': [
                 'FLYING J 637|445 EVANSDALE DR|EVANSDALE',
-                'LOVES|NOT SURE|NeedToAdd',
+                "Love's Travel Stop in Waterloo, IA. Store #702|3301 Greyhound Dr|Waterloo",
                 'PILOT 1092|8950 EARHART LN SW|CEDAR RAPIDS'
             ],
             '145': [
@@ -1486,12 +1487,12 @@
             '153': [
                 'SHELL SERVICE STATIO|505 W IL ROUTE 38|ROCHELLE',
                 'BP 2618800|1180 N 7TH ST|ROCHELLE',
-                'BENNYS CORNER MARKE|601 FLAGG RD|ROCHELLE',
-                'STOP-N-GO #1530|1000 S 7TH ST|ROCHELLE,STOP-N-GO #1530',
+                'BENNY\'S CORNER MARKE|601 FLAGG RD|ROCHELLE',
+                'STOP-N-GO #1530|1000 S 7TH ST|ROCHELLE'
             ],
             '157': [
                 'CIRCLE K 1350|107 W ELM ST|OKAWVILLE',
-                'LOVES|8690 RICHTER SCHOOL RD|NeedToAdd'
+                "Love's Travel Stop in New Baden, IL. Store #583|8690 Richter School Rd|New Baden"
             ],
             '181': [
                 'CIRCLE K SITE #0140|1201 TORONTO RD|SPRINGFIELD,CIRCLE K SITE',
@@ -1505,7 +1506,7 @@
             ],
             '186': [
                 'CASEYS #1326|115 E 5TH ST|MINONK',
-                'LOVES|2007 N MAIN ST|NeedToAdd',
+                "Love's Travel Stop in Normal, IL. Store #867|2007 N Main St|Normal",
                 'PILOT|1522 W MARKET ST|NeedToAdd (not on wex)'
             ],
             '187': [
@@ -1513,7 +1514,7 @@
                 'MARATHON|3541 S CALIFORNIA AVE|CHICAGO(NeedToAdd)'
             ],
             '203': [
-                'LOVES|4628 SOUTH MAIN STREET|ROCKFOR(NeedToAdd)',
+                "Love's Travel Stop in Rockford, IL. Store #775|4628 South Main Street|Rockford",
                 'SOUTH MAIN MART|550 SOUTHROCK DR|ROCKFORD'
             ],
             '205': [
@@ -1521,7 +1522,7 @@
                 'KWIK TRIP #1276|16040 OAKFIELD PKWY|SOUTH BELOIT',
                 'THORNTONS #221331 DIESE|13555 WILLOWBROOK RD|ROSCOE',
                 'SPEEDWAY 3962|5951 E ROCKTON RD|ROSCOE(NeedToAddToSpeedwayScraper)',
-                'LOVES|13477 QUALITY DR,|ROSCOE(NeedToAdd)',
+                "Love's Travel Stop in Roscoe, IL. Store #322|13477 Quality Dr.|Roscoe",
                 'PILOT|3001 MILWAUKEE RD|BELOIT(NeedToAdd not on wex)',
                 'FAS. FUEL SHIRLAND|518 SHIRLAND AVE|SOUTH BELOIT'
             ],
@@ -1530,7 +1531,7 @@
                 'QUIKTRIP 4428|1555 SANDY HOLLOW RD|ROCKFORD'
             ],
             '209': [
-                'LOVES|220 N OAKWOOD ST|TOMAH(NeedToAdd)',
+                "Love's Travel Stop in Oakdale, WI. Store #345|220 Oakwood St.|Oakdale",
                 'KWIK TRIP 775|611 GATEWAY AVE|MAUSTON',
                 'PILOT|1101 GATEWAY AVE|MAUSTON(NeedToAdd not on wex)',
                 'FLYING J|780 WI-54|BLACK RIVER FALLS(NeedToAdd not on wex)'
@@ -1539,8 +1540,8 @@
                 'CIRCLEK# 4701408|1110 DEMENT RD|ROCHELLE',
                 'PETRO CENTER ROCHELL|900 PETRO RD|ROCHELLE',
                 'PILOT 1181|1201 E IL ROUTE 38|ROCHELLE',
-                'LOVES|400 STEWARD RD|ROCHELLE(NeedToAdd)',
-                'LOVES|16991 IL-72|MONROE CENTER(NeedToAdd)'
+                "Love's Travel Stop in Rochelle, IL. Store #754|400 Steward Road|Rochelle",
+                "Love's Travel Stop in Monroe Center, IL. Store #851|16991 E Illinois Rte 72|Monroe Center"
             ],
             '211': [
                 'TOLLWAY MOBIL|7490 E RIVERSIDE BLVD|LOVES PARK',
@@ -1564,9 +1565,9 @@
             ],
             '235': [
                 'SPEEDWAY 5036|110 ARROWHEAD DR|HAMPSHIRE',
-                'LOVES|201 LOVES CROSSING|HAMPSHIRE(NeedToAdd)',
+                "Love's Travel Stop in Hampshire, IL. Store #763|201 Love's Crossing|Hampshire",
                 'BP 9573387|19N430 US-20|HAMPSHIRE',
-                'LOVES|1900 BUSSE RD|ELK GROVE(NeedToAdd)'
+                "Love's Travel Stop in Elk Grove Village, IL. Store #800|1900 Busse Rd|Elk Grove Village"
             ],
             '236': [
                 'SCOTT OIL CO.INC|2526 MAIN ST|EAST TROY',
@@ -1584,13 +1585,13 @@
                 'L W PERUSSE OIL CO.|333 HIGHWAY Z|SAINT ROBERT',
                 'ON THE RUN #250|122 SAINT ROBERT BLVD|SAINT ROBERT',
                 'GIER OIL CO. INC.|681 OLD ROUTE 66|SAINT ROBERT',
-                'LOVES|3500 HY POINT INDUSTRIAL|ROLLA(NeedToAdd)',
+                "Love's Travel Stop in Rolla , MO. Store #341|3500 Hy Point Ind. Park Dr.|Rolla",
                 'FLYING J 673|825 N LOOP DR|SULLIVAN'
             ],
             '263': [
                 'JOHNSON OIL CO.|3074 N STATE ROUTE 71|OTTAWA,JOHNSON OIL CO.',
                 'THORNTONS #222364|102 W ETNA RD|OTTAWA,THORNTONS #222364',
-                'LOVES|3020 E 8TH RD|UTICA(NeedToAdd)',
+                "Love's Travel Stop in Utica , IL. Store #351|3020 E. 8th Rd.|Utica",
                 'PILOT 483|3801 N DIVISION ST|MORRIS'
             ],
             '265': [
@@ -1598,7 +1599,7 @@
                 'MURPHY 7165 ATWALMRT|1620 S GALENA AVE|DIXON'
             ],
             '266': [
-                'LOVES|201 LOVES DR|JACKSONVILLE(NeedToAdd)'
+                "Love's Travel Stop in South Jacksonville, IL. Store #687|201 Loves Dr|South Jacksonville"
             ],
             '267': [
                 'SE 40665 PHARR TX|10701 S CAGE BLVD|PHARR',
@@ -1608,7 +1609,7 @@
             '268': [
                 'CASEYS #2514|306 N COURT ST|GRAYVILLE',
                 'HUCKS 101|552 N COURT ST|GRAYVILLE',
-                'LOVES|901 E 1250 S|HAUBSTADT(NeedToAdd)',
+                "Love's Travel Stop in Haubstadt, IN. Store #414|901 East 1250 South|Haubstadt",
                 'PILOT|4610 BROADWAY ST|MT VERNON(NeedToAdd not on wex)'
             ],
             '269': [
@@ -1616,11 +1617,11 @@
                 'SHELL SERVICE STATIO|1803 IL -1|MARSHALL',
                 'CLARK COUNTY FUELS L|105 S MICHIGAN AVE|MARSHALL',
                 'ONE9|5555 E MARGARET DR|TERRE HAUTE(NeedToAdd not on wex)',
-                'LOVES|203 N HAUGHTON HWY|Greenup(NeedToAdd)',
+                "Love's Travel Stop in Greenup, IL. Store #688|203 N Haughton Hwy|Greenup",
                 'PILOT|2500 N 3RD ST|EFFINGHAM(NeedToAdd not on wex)'         
             ],
             '270': [
-                'LOVES|21548 FM 471 S|NATALIA(NeedToAdd)',
+                "Love's Travel Stop in Natalia, TX. Store #471|21548 FM 471 S|Natalia",
                 'PILOT|14555 INTERSTATE 35|VAN ORMY(NeedToAdd not on wex)',
                 'RAM OIL LTD. LLP|1104 W COMAL ST|PEARSALL'
             ],
@@ -1628,25 +1629,25 @@
                 'PILOT 1161|3145 METEOR CRATER RD|ODESSA',
                 'ALLSUPS|3330 FM 866|ODESS(NeedToAdd not on wex)',
                 'SHELL SERVICE STATIO|5934 W INTERSTATE 20|ODESSA',
-                'LOVES|1901 W INTERSTATE 20|ODESSA(NeedToAdd)',
+                "Love's Travel Stop in Odessa , TX. Store #339|1901 W. I-20|Odessa",
                 'PILOT 1207|101 S LOOP 464 RD|MONAHANS',
                 'PILOT # 1147|127 W STATE HIGHWAY 302|KERMIT',
                 'FLYING J #1206|700 E HWY 302|KERMIT'
             ],
             '272': [
-                'LOVES|28527 I-35|ENCINAL(NeedToAdd)',
-                'LOVES|1963 I-35|COUTLLA(NeedToAdd)'
+                "Love's Travel Stop in Encinal, TX. Store #298|28527 I-35|Encinal",
+                "Love's Travel Stop in Cotulla, TX. Store #862|1963 S IH 35|Cotulla"
             ],
             '273': [
-                'LOVES|21379 US 77 EXPRESSWAY|HARLINGEN(NeedToAdd)',
+                "Love's Travel Stop in Harlingen, TX. Store #885|21379 US 77 Expressway|Harlingen",
                 '21469 US-77 FRONTAGE RD|HARLINGEN(NeedToAdd)',
-                'LOVES|545 I-2|DONNA(NeedToAdd)',
-                'LOVES|3400 NAFTA PKWY|BROWNSVILLE(NeedToAdd)',
-                'LOVES|1451 N US HIGHWAY 77|KINGSVILLE(NeedToAdd)'
+                "Love's Travel Stop in Donna, TX. Store #739|545 W I-2|Donna",
+                "Love's Travel Stop in Brownsville, TX. Store #767|3400 Nafta Parkway|Brownsville",
+                "Love's Travel Stop in Kingsville, TX. Store #327|1451 N US Highway 77 Byp|Kingsville"
             ],
             '275': [
                 'SUNOCO SRVC STATION|805 N CROCKETT AVE|SONORA',
-                'LOVES|3880 LOOP 467|SONORA(NeedToAdd)',
+                "Love's Travel Stop in Sonora, TX. Store #700|3880 Loop 467|Sonora",
                 'PILOT|2342 N MAIN ST|JUNCTION(NeedToAdd on wex but not scraped)',
             ],
             '276': [
@@ -1655,64 +1656,64 @@
                 'PILOT|2409 S NEW RD|WACO(NeedToaAdd on wex but not scraped)',
                 'PILOT|8055 S IH 35|ROBINSON(NeedToAdd not on wex)',
                 'ABBOTT TRAVEL CENTER|1197 IH 35 S|ABBOTT',
-                'LOVES|1501 CORSICANA HWY|HILLSBORO(NeedToAdd)'
+                "Love's Travel Stop in Hillsboro, TX. Store #231|1501 Corsicana Hwy|Hillsboro"
             ],
             '277': [
                 'CIRCLE K|905 N MCCOY BLVD|NEW BOSTON(NeedToAdd not on wex)',
                 'PARADISE QUICKSTOP #|900 N MCCOY BLVD|NEW BOSTON',
                 'SHELL SERVICE STATIO|708 N MCCOY BLVD|NEW BOSTON',
                 'TIGER MART 88|1888 W US HIGHWAY 82|NEW BOSTON',
-                'LOVES|2486 US-82|NEW BOSTON(NeedToAdd)',
-                'LOVES|451 LEARY RD|TEXARKANA(NeedToAdd)'
+                "Love's Travel Stop in New Boston, TX. Store #852|2486 US Hwy-82 W|New Boston",
+                "Love's Travel Stop in Leary, TX. Store #473|451 Leary Road|Leary"
             ],
             '278': [
                 'BRINKLEY MOBIL JFS #|2102 N HWY 49|BRINKLEY',
                 'HARI FOOD MART|1920 N MAIN ST|BRINKLEY',
                 'ONE9|2101 HWY 49|BRINKLEY(NeedToAdd not on wex)',
                 'JORDANS KWIK STOP #8|1414 N MAIN ST|BRINKLEY',
-                'LOVES|1010 N MAIN ST|PALESTINE'
+                "Love's Travel Stop in Palestine, AR. Store #275|1010 N Main St|Palestine"
             ],
             '279': [
                 'SHAH PETROLEUM LLC|1754 ILLINOIS 37|MARION,SHAH PETROLEUM LLC',
                 'CASEYS #3391|2314 W MAIN ST|MARION,CASEYS #3391',
                 'PILOT #595|2611 VERNELL RD|MARION',
-                'LOVES|1900 THE HILL AVE|MARION(NeedToAdd)',
+                "Love's Travel Stop in Marion, IL. Store #803|1900 The Hill Ave|Marion",
             ],
             '280': [
                 'QUIKTRIP 7913|1907 S STOCKTON AVE|MONAHANS',
                 'PILOT 1207|101 S LOOP 464 RD|MONAHANS',
                 'PILOT|4840 I-20|MONAHANS(NeedToAdd)',
                 'FLYING J #1206|700 E HWY 302|KERMIT',
-                'LOVES|674 TX-302|KERMIT(NeedToAdd)',
-                'LOVES|5202 S CEDAR ST|PECOS(NeedToAdd)'
+                "Love's Travel Stop in Kermit, TX. Store #853|674 E State Hwy 302|Kermit",
+                "Love's Travel Stop in Pecos, TX. Store #492|5202 South Cedar St.|Pecos"
             ],
             '281': [
                 "ALLSUP'S 102105|2205 CONRAD HILTON BLVD|CISCO",
                 'SUNOCO SRVC STATION|1500 INTERSTATE 20 W|CISCO',
                 'SHELL SERVICE STATIO|16851 INTERSTATE 20|CISCO',
-                'LOVES|6950 I-20|RANGER(NeedToAdd)'
+                "Love's Travel Stop in Ranger, TX. Store #270|6950 I-20|Ranger"
             ],
             '282': [
                 'GAINESVILLE TRUCK ST.|3590 N INTERSTATE 35|GAINESVILLE',
                 'XPRESSWAY VALERO|1934 N INTERSTATE 35|GAINESVILLE',
                 'QUIKTRIP 1883|926 W HIGHWAY 82|GAINESVILLE',
-                'LOVES|6421 N INTERSTATE 35|DENTON(NeedToAdd)'
+                "Love's Travel Stop in Denton, TX. Store #609|6421 N I-35|Denton"
             ],
             '283': [
                 'NEED TO MAKE ROAD RANGER GET SCRAPED FROM WEX THEN HANDLE THIS'
             ],
             '284': [
                 'HOP IN 430469|101 E MAIN ST|NEW DEAL',
-                'LOVES|4221 N INTERSTATE 27|LUBBOCK(NeedToAdd)',
+                "Love's Travel Stop in Lubbock, TX. Store #589|4221 North Interstate 27|Lubbock",
                 'SEI FUELS STORE 4252|2424 N LOOP 289|LUBBOCK',
                 'FLYING J 733|602 MARSHA SHARP FWY|LUBBOCK',
-                "TOOTN' TOTUM #138|5202 ERSKINE ST|LUBBOCK",
+                "TOOT'N TOTUM #138|5202 ERSKINE ST|LUBBOCK",
                 'ROOTS SLAYTON|1755 S 9TH ST|SLATON'
             ],
             '285': [
                 'CK. SITE #4028|1805 W INTERSTATE 10|SEGUIN',
                 'CHEVRON 0383946|1810 W INTERSTATE 10|SEGUIN(NeedToAdd on wex but not scraped)',
-                'LOVES|3158 I-10 W|SEGUIN(NeedToAdd)',
+                "Love's Travel Stop in Seguin, TX. Store #463|3158 I-10 W|Seguin",
                 'QUIKTRIP 4044|200 E INTERSTATE 10|SEGUIN(NeedToAdd on wex but not scraped)',
                 'SHELL SERVICE STATIO|2718 FM 725|NEW BRAUNFELS'
             ],
@@ -1722,7 +1723,7 @@
                 'FLYING J 723|9601 I40 E EXIT 76|AMARILLO',
                 "TOOT'N TOTUM #99|8507 E INTERSTATE 40|AMARILLO",
                 'TA AMARILLO|7000 E INTERSTATE 4 0|AMARILLO',
-                'LOVES|6930 I-40 E|AMARAILLO',
+                "Love's Travel Stop in Amarillo, TX. Store #200|6930 I-40 E.|Amarillo",
                 'CEFCO 2005|5000 E INTERSTATE 40|AMARILLO',
                 'QUIKTRIP 7908|5105 E INTERSTATE 40|AMARILLO'
             ],
@@ -1730,15 +1731,15 @@
                 'LENNYS GAS N WASH BO|5916 N CONVENT ST|BOURBONNAIS',
                 'SPEEDWAY 43593|604 ARMOUR RD|BOURBONNAIS',
                 'SHELL SERVICE STATIO|601 S 88TH AVE|PEOTONE',
-                'LOVES|3407 US-45|KANKAKEE(NeedToAdd)',
+                "Love's Travel Stop in Kankakee, IL. Store #395|3407 South State Road 45/52|Kankakee",
                 'PILOT|6002 W MONEE MANHATTAN RD|MONEE(NeedToAdd not on wex)'
             ],
             '289': [
                 'JET TRUCK STOP|771 STATE HIGHWAY 179|TEAGUE',
                 'TA EXPRESS FAIRFIELD|300 E I 45|FAIRFIELD',
-                'LOVES|299 I-45|FAIRFIELD(NeedToAdd)',
+                "Love's Travel Stop in Hillsboro, TX. Store #231|1501 Corsicana Hwy|Hillsboro",
                 'PILOT 1028|2605 W COMMERCE ST|BUFFALO',
-                'LOVES|1501 CORSICANA HWY|HILLSBORO(NeedToAdd)'
+                "Love's Travel Stop in Fairfield, TX. Store #288|299 I-45|Fairfield"
             ],
             '290': [
                 'PRIGMORE AVE. 66|2100 S PRIGMORE AVE|JOPLIN',
@@ -1754,21 +1755,21 @@
                 'PILOT|7112 I-10 W|ORANGE(NeedToAdd)'
             ],
             '315': [
-                'LOVES|101 PINNACLE RD|LAREDO(NeedToAdd)'
+                "Love's Travel Stop in Laredo, TX. Store #762|101 Pinnacle Road|Laredo"
             ],
             '319': [
-                'LOVES|1021 DALE EVANS DR|ITALY(NeedToAdd)',
+                "Love's Travel Stop in Hillsboro, TX. Store #231|1501 Corsicana Hwy|Hillsboro",
                 'SHELL SERVICE STATIO|1020 DALE EVANS DR|ITALY',
                 'TIGER MART #32|101 L R CAMPBELL RD|ITALY',
                 'SHELL SERVICE STATIO|160 STATE HIGHWAY 77|HILLSBORO',
-                'LOVES|1501 CORSICANA HWY|HILLSBORO(NeedToAdd)'
+                "Love's Travel Stop in Italy, TX. Store #628|1021 Dale Evans Dr|Italy"
             ],
             '323': [
                 'NAT 24 CANTON|17169 INTERSTATE 20|CANTON',
                 'CIRCLEK# 2706340|2256 N TRADE DAYS BLVD|CANTON',
                 'SHELL SERVICE STATIO|21620 INTERSTATE 20|CANTON',
                 'SHELL SERVICE STATIO|9800 INTERSTATE 20|CANTON',
-                'LOVES|1221 S OAK ST|VAN(NeedToAdd)',
+                "Love's Travel Stop in Van, TX. Store #287|1221 S. Oak St|Van",
                 'SHELL SERVICE STATIO|1700 WILSON RD|TERRELL',
                 'QUIKTRIP 0993|1619 STATE HIGHWAY 34 S|TERRELL',
                 'BUC-EES|506 I-20|TERRELL(NeedToAdd not on wex)'
