--- a/price-index.html
+++ b/price-index.html
@@ -722,6 +722,9 @@
             width: auto;
             font-size: 12px;
             text-transform: none;
+            max-width: 150px;  /* ADD THIS LINE */
+            white-space: normal;  /* ADD THIS LINE */
+            line-height: 1.3;  /* ADD THIS LINE */
         }
 
         .pricing-table tbody tr {
