--- a/price-index.html
+++ b/price-index.html
@@ -4733,7 +4733,8 @@
                                     return label;
                                 }
                             }
-                        }
+                        },
+                        datalabels: { display: false }
                     },
                     scales: {
                         x: {
